# blockcopy-video-processing-pytorch

./: .gitignore  note.txt  requirements.txt
Pedestron/: .gitignore
Pedestron/datasets/CityPersons/: val.json
Pedestron/tools/: ES.py  cityperson2coco.py  decode_video.sh  plot_histogram.py  test.py  test_OBDS.py  test_city_person.py  test_city_person_OBDS.py  test_city_person_OBDS_motion.py  test_city_person_OBDS_update_ref.py  test_city_person_copy.py  test_city_person_cv2_template.py  test_city_person_gen_json.py  test_city_person_new_dataset.py  test_city_person_ts.py  test_city_person_wildtrack.py  test_cutout.py  test_cv2_template.py  test_early_exit.py  test_gt.py  test_mosaic.py  test_mosaic2.py  test_wildtrack.py
blockcopy/blockcopy/core/: blockcopy.py  tensorwrapper.py
blockcopy/blockcopy/policy/: information_gain.py  net.py  policy.py
demo/: .gitignore  CMakeLists.txt  DS.py  DS_video.py  DS_video_with_detector.py  ES.py  MAD_observation.py  OBDS.py  OBDS_pytorch.cpp  OBDS_zoo2.cpp  combine_video.py  create_gif.py  create_video.py  crop_img.py  eval_json.py  gen_frame_state.py  gen_frame_state2.py  motion_compensation.py  new_DS.py  new_DS_center.py  new_DS_center_multiscale.py  online_yolov5.py  set_remote_datasets.sh  split_img.py  test_DS.py
demo/CUDA_demo/: 000001.txt  DS.cu  DS.py  DS_cpu_map.py  DS_cpu_multi_process.py  DS_cpu_native.py  DS_cpu_numba.py  new_DS_numba_jit.py  test.py  test_numba.py  vector_add
demo/OBDS/: CMakeLists.txt  DS_video_with_detector.py  OBDS_zoo.cpp  main.py  online_yolov5.py  setup.py
demo/example-app/: CMakeLists.txt
(+20 files in other folders)
